--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,6 @@
 @use './pages/checkout';
 @use './pages/orderconfirmed';
 @use './pages/profile';
+@use './pages/shop';
+@use './pages/products';
+@use './pages/pagenotfound';
