--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -64,24 +64,8 @@
 }
 
 // quantity input
-// .qty-input {
-//   width: 45px;
-//   padding: 1em 0;
-//   font-size: 0.875rem;
-//   font-weight: map-get(fonts.$font-weight, regular);
-//   text-align: center;
-//   color: colors.$primary-color;
-//   background: none;
-//   outline: none;
-//   border: 1px solid colors.$light-color;
-//   border-radius: 0;
-//   border-right: none;
-//   border-left: none;
-//   pointer-events: none;
-//   cursor: default;
-// }
 .qty-input {
-  width: 100%;
+  width: 45px;
   padding: 1em 0;
   font-size: 0.875rem;
   font-weight: map-get(fonts.$font-weight, regular);
@@ -90,8 +74,24 @@
   background: none;
   outline: none;
   border: 1px solid colors.$light-color;
-  border-radius: 5px;
+  border-radius: 0;
+  border-right: none;
+  border-left: none;
+  pointer-events: none;
+  cursor: default;
 }
+// .qty-input {
+//   width: 100%;
+//   padding: 1em 0;
+//   font-size: 0.875rem;
+//   font-weight: map-get(fonts.$font-weight, regular);
+//   text-align: center;
+//   color: colors.$primary-color;
+//   background: none;
+//   outline: none;
+//   border: 1px solid colors.$light-color;
+//   border-radius: 5px;
+// }
 .cart-qty-input {
   width: 150px;
   padding: 1em 0;
