Shop, Product, 404 Pages

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -82,7 +82,11 @@
     @include flex.flex(center, center, row);
     & > div {
       display: flex;
-      margin-right: 1.5em;
+      align-items: center;
+
+      &:not(.profile-menu) {
+        margin-right: 1.5em;
+      }
     }
   }
 
