--- a/src/scss/pages/_shop.scss
+++ b/src/scss/pages/_shop.scss
@@ -75,17 +75,17 @@
       padding: 1.5em 0.8em;
       height: fit-content;
       transition: all 0.25s ease;
-      & .hidden {
-        opacity: 0;
-      }
-      &:hover {
-        background: #e5e5e5;
-        border-radius: 15px;
-        box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
-      }
-      &:hover .hidden {
-        opacity: 1;
-      }
+      // & .hidden {
+      //   opacity: 0;
+      // }
+      // &:hover {
+      //   background: #e5e5e5;
+      //   border-radius: 15px;
+      //   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
+      // }
+      // &:hover .hidden {
+      //   opacity: 1;
+      // }
       & .labels {
         @include flex.flex(space-between, center, row);
         & .product-label {
