--- a/src/scss/pages/_products.scss
+++ b/src/scss/pages/_products.scss
@@ -123,7 +123,8 @@
     grid-column: 3/4;
     grid-row: 1/3;
     .product-color {
-      margin-bottom: 1.5em;
+      // margin-bottom: 1.5em;
+      margin-bottom: 1em;
       & p {
         font-size: 1.125rem;
         font-weight: map-get(fonts.$font-weight, medium);
