--- a/src/scss/pages/_products.scss
+++ b/src/scss/pages/_products.scss
@@ -39,25 +39,26 @@
     }
   }
   .product-info {
+    align-self: end;
     grid-column: 1/2;
     grid-row: 1/2;
 
-    .label {
-      padding: 0.1em 0.3em;
-      width: fit-content;
-      font-size: 1.125rem;
-      font-weight: map-get(fonts.$font-weight, semi-bold);
-      background: colors.$sale-color;
-      color: colors.$text-color;
-      border-radius: 5px;
-    }
+    // .label {
+    //   padding: 0.1em 0.3em;
+    //   width: fit-content;
+    //   font-size: 1.125rem;
+    //   font-weight: map-get(fonts.$font-weight, semi-bold);
+    //   background: colors.$sale-color;
+    //   color: colors.$text-color;
+    //   border-radius: 5px;
+    // }
     .product-name {
       font-size: 3rem;
       font-weight: map-get(fonts.$font-weight, semi-bold);
       color: colors.$primary-color;
     }
     .reviews {
-      @include flex.flex(space-between, center, row);
+      @include flex.flex(space-between, stretch, row);
       margin-top: -0.5em;
       margin-bottom: 0.3em;
       .ratings {
