Added Quantity Button

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -326,7 +326,7 @@
     }
   }
   @include media.bigMobile {
-    .login-outline-btn {
+    .login-btn {
       display: none;
     }
     .login-nav {
