--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -40,15 +40,15 @@
 .minus-btn {
   font-size: 1.5rem;
   width: 45px;
-  color: colors.$primary-color;
+  // color: colors.$light-color;
   border: 1px solid colors.$light-color;
   border-right: none;
   border-radius: 5px 0 0 5px;
 }
-.plus-btn {
+.plus-btn:not(.disabled) {
   font-size: 1.5rem;
   width: 45px;
-  color: colors.$primary-color;
+  // color: colors.$light-color;
   border: 1px solid colors.$light-color;
   border-left: none;
   border-radius: 0 5px 5px 0;
