--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -45,7 +45,7 @@
   border-right: none;
   border-radius: 5px 0 0 5px;
 }
-.plus-btn:not(.disabled) {
+.plus-btn {
   font-size: 1.5rem;
   width: 45px;
   // color: colors.$light-color;
