--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -109,18 +109,18 @@
 //     opacity: 1;
 //   }
 // }
-.cart-qty-input {
-  width: 150px;
-  padding: 1em 0;
-  font-size: 0.875rem;
-  font-weight: map-get(fonts.$font-weight, regular);
-  text-align: center;
-  color: colors.$primary-color;
-  background: none;
-  outline: none;
-  border: 1px solid colors.$light-color;
-  border-radius: 5px;
-}
+// .cart-qty-input {
+//   width: 150px;
+//   padding: 1em 0;
+//   font-size: 0.875rem;
+//   font-weight: map-get(fonts.$font-weight, regular);
+//   text-align: center;
+//   color: colors.$primary-color;
+//   background: none;
+//   outline: none;
+//   border: 1px solid colors.$light-color;
+//   border-radius: 5px;
+// }
 textarea {
   padding: 1em;
   font-family: fonts.$font-stack;
