--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -20,7 +20,7 @@
 // Apply Button
 .apply-btn {
   position: absolute;
-  top: 9.5px;
+  top: 16%;
   right: 2px;
   padding: 0.75em 1.5em;
   font-size: 1rem;
