--- a/src/scss/pages/_checkout.scss
+++ b/src/scss/pages/_checkout.scss
@@ -300,15 +300,15 @@
       padding: 0.5em 0;
       border-bottom: 1px solid colors.$disabled-color;
       & img {
-        width: 120px;
-        object-fit: cover;
+        width: 100px;
+        object-fit: contain;
         margin-right: 0.8em;
         padding: 0.4em;
         background: #e5e5e5;
         border-radius: 5px;
       }
       & .item-name {
-        font-size: 1.25rem;
+        font-size: 1rem;
         font-weight: map-get(fonts.$font-weight, semi-bold);
         color: colors.$primary-color;
       }
