--- a/src/scss/pages/_checkout.scss
+++ b/src/scss/pages/_checkout.scss
@@ -11,9 +11,7 @@
     background: colors.$primary-color;
 
     & img {
-      // position: relative;
-      // top: 100%;
-      // left: 23%;
+      margin-left: 19em;
       width: 120px;
       object-fit: cover;
     }
