--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -21,8 +21,8 @@
   padding: 0 1em;
   background: colors.$accent-color;
   border-radius: 0 5px 5px 0;
-  opacity: 0;
-  pointer-events: none;
+  //opacity: 0;
+  //pointer-events: none;
   transition: all 0.5s ease;
   &:hover {
     background: colors.$secondary-color;
