--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -8,5 +8,8 @@ $disabled-color: #c4c4c4;
 $banner-color: #e6e8ec;
 $text-color: #fff;
 $validation-color: #ec2d40;
+$processing-color: #78909c;
+$shipped-color: #428bc1;
+$success-color: #57b894;
 $sale-color: #df5d7d;
 $pending-color: #fbbc05;
