--- a/src/scss/pages/_profile.scss
+++ b/src/scss/pages/_profile.scss
@@ -98,6 +98,68 @@
     width: 790px;
     max-width: 100%;
     padding: 1.5em 0;
+
+    & table {
+      & th {
+        font-size: 1.125rem;
+        font-weight: map-get(fonts.$font-weight, medium);
+        color: colors.$primary-color;
+      }
+      & td {
+        font-size: 1rem;
+        font-weight: map-get(fonts.$font-weight, regular);
+        color: colors.$primary-color;
+        border-bottom: 1px solid colors.$disabled-color;
+      }
+
+      .status {
+        display: inline-block;
+        padding: 0.3em 0.5em;
+        color: colors.$text-color;
+        border-radius: 5px;
+      }
+
+      .pending {
+        background: colors.$pending-color;
+      }
+      .processing {
+        background: colors.$processing-color;
+      }
+      .shipped {
+        background: colors.$shipped-color;
+      }
+      .cancelled {
+        background: colors.$validation-color;
+      }
+      .success {
+        background: colors.$success-color;
+      }
+
+      .total-amount {
+        @include flex.flex(flex-start, center, row);
+        .peso-sign {
+          margin-right: 0.1em;
+          color: colors.$primary-color;
+        }
+      }
+
+      .track-btn {
+        padding: 0.3em 0.8em;
+        font-size: 1rem;
+        font-weight: map-get(fonts.$font-weight, regular);
+        box-shadow: none;
+      }
+    }
+
+    .empty-order {
+      @include flex.flex(center, center, column);
+      margin-top: 1em;
+      & img {
+        width: 500px;
+        object-fit: cover;
+        margin-bottom: 1em;
+      }
+    }
     & h4 {
       margin-bottom: 1em;
       font-size: 1.5rem;
