--- a/src/scss/pages/_profile.scss
+++ b/src/scss/pages/_profile.scss
@@ -99,6 +99,88 @@
     max-width: 100%;
     padding: 1.5em 0;
 
+    .form {
+      margin-bottom: 1em;
+    }
+
+    .address-header {
+      @include flex.flex(space-between, stretch, row);
+
+      .add-address {
+        font-size: 1rem;
+        font-weight: map-get(fonts.$font-weight, medium);
+        color: colors.$accent-color;
+        cursor: pointer;
+        transition: all 0.5s ease-out;
+
+        .add-icon {
+          margin-right: 0.3em;
+        }
+
+        &:hover {
+          color: colors.$secondary-color;
+        }
+      }
+    }
+
+    .address-wrapper {
+      @include flex.flex(space-between, center, row);
+      flex-wrap: wrap;
+      .address-container {
+        position: relative;
+        width: 100%;
+        max-width: 365px;
+        height: fit-content;
+        margin-bottom: 3.5em;
+        padding: 1.3em;
+        background: colors.$body-color;
+        border-radius: 15px;
+        box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
+
+        .address-details {
+          & h3 {
+            font-size: 1.25rem;
+            font-weight: map-get(fonts.$font-weight, medium);
+            color: colors.$primary-color;
+          }
+          & p {
+            font-size: 1rem;
+            font-weight: map-get(fonts.$font-weight, regular);
+            color: colors.$primary-color;
+          }
+        }
+
+        .address-actions {
+          position: absolute;
+          @include flex.flex(space-around, center, column);
+          top: 10%;
+          right: 5%;
+
+          .action-icon {
+            width: 24px;
+            height: 24px;
+            color: colors.$primary-color;
+            transition: all 0.5s ease-out;
+
+            &:hover {
+              color: colors.$accent-color;
+            }
+          }
+        }
+
+        .primary {
+          display: inline-block;
+          margin-left: auto;
+          padding: 0.1em 0.5em;
+          font-size: 0.875rem;
+          font-weight: map-get(fonts.$font-weight, medium);
+          background: colors.$success-color;
+          color: colors.$text-color;
+          border-radius: 5px;
+        }
+      }
+    }
+
     & table {
       & th {
         font-size: 1.125rem;
@@ -114,7 +196,7 @@
 
       .status {
         display: inline-block;
-        padding: 0.3em 0.5em;
+        padding: 0.1em 0.5em;
         color: colors.$text-color;
         border-radius: 5px;
       }
@@ -160,6 +242,16 @@
         margin-bottom: 1em;
       }
     }
+
+    .no-data {
+      @include flex.flex(center, center, column);
+      margin-top: 1em;
+      & img {
+        width: 400px;
+        object-fit: cover;
+        margin-bottom: 1em;
+      }
+    }
     & h4 {
       margin-bottom: 1em;
       font-size: 1.5rem;
@@ -171,7 +263,7 @@
     }
 
     & .left-input {
-      margin-right: 1em;
+      margin-right: 1.6em;
     }
 
     & .button-container {
@@ -179,7 +271,7 @@
       margin-top: 3em;
 
       & .update-btn {
-        margin: 0 0.8em 0 1em;
+        margin-left: 1em;
       }
 
       & .del-acct {
